k8s/ingress/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: app.192.168.68.113.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: node-app-svc
                port:
                  number: 3000
